--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "clean": "rm -r node_modules",
-    "preview": "vite preview"
+    "clean": "rm -rf node_modules"
   },
   "dependencies": {
     "react": "^19.1.0",
