--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,18 +6,23 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "clean": "rm -rf node_modules",
-    "dev": "nest start --watch --debug",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && nest build",
+    "clean": "rm -rf node_modules generated prisma/generated",
+    "dev": "prisma generate && nest start --watch --debug",
     "start": "node dist/main",
     "test": "jest"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "6.9.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^6.9.0",
+    "prisma-zod-generator": "^0.8.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
@@ -28,7 +33,8 @@
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.31",
     "@types/express": "^5.0.3",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "globals": "^16.2.0",
     "source-map-support": "^0.5.21",
