--- a/package.json
+++ b/package.json
@@ -6,32 +6,39 @@
     "ts-jest": "^29.3.4",
     "typescript": "^5.8.3"
   },
-  "workspaces": ["apps/**"],
+  "workspaces": [
+    "apps/**"
+  ],
   "scripts": {
     "dev": "pnpm run --parallel dev",
     "dev:client": "pnpm --filter client dev",
     "dev:server": "pnpm --filter server dev",
-
     "build": "pnpm run --recursive build",
     "build:client": "pnpm --filter client build",
     "build:server": "pnpm --filter server build",
-
     "format": "biome check --write",
     "format:check": "biome check",
-
     "test": "jest",
-
     "clean": "pnpm run --recursive clean && rm -rf node_modules"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "zod": "^3.25.58"
   }
 }
