--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "build": "prisma generate && nest build",
-    "clean": "rm -rf node_modules generated prisma/generated",
+    "clean": "rm -rf node_modules dist",
     "dev": "prisma generate && nest start --watch --debug",
     "start": "node dist/main",
     "test": "jest"
@@ -16,15 +16,18 @@
   "dependencies": {
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "6.9.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.9.0",
-    "prisma-zod-generator": "^0.8.13",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -32,6 +35,8 @@
     "@nestjs/testing": "^11.1.3",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.31",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.0",
     "@types/passport-jwt": "^4.0.1",
