--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["**/tsconfig.*.json", "**/tsconfig.json"]
+    "ignore": [
+      "**/tsconfig.*.json",
+      "**/tsconfig.json",
+      "node_modules",
+      "generated",
+      "dist"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -28,6 +34,9 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   }
 }
