chore: minor setups

--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,5 @@ source_up_if_exists
 source_env_if_exists ./.envrc.local
 
 export TZ='UTC'
-export PORT='8080'
+export BACKEND_PORT='8080'
+export FRONTEND_PORT='3000'
