--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
       "recommended": true,
       "style": {
         "useImportType": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
