--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "pnpm run --parallel dev",
     "dev:client": "pnpm --filter client dev",
     "dev:server": "pnpm --filter server dev",
+    "seed": "pnpm -filter server seed",
     "build": "pnpm run --recursive build",
     "build:client": "pnpm --filter client build",
     "build:server": "pnpm --filter server build",
