--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "6.9.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.9.0",
@@ -31,6 +32,7 @@
     "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
