--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true, // React에서 필요할 수 있음
-    "noEmit": true // 루트에서는 컴파일하지 않음 (패키지별로 처리)
+    "isolatedModules": true, 
+    "noEmit": true
   }
 }
