--- a/.envrc
+++ b/.envrc
@@ -3,4 +3,5 @@ source_env_if_exists ./.envrc.local
 
 export TZ='UTC'
 export BACKEND_PORT='8080'
-export FRONTEND_PORT='3000'
+export FRONTEND_PORT='5000'
+export JWT_LIFESPAN='10h'
